@@ -1,0 +1,4 @@
+/**
+ * This package contains classes for working with files and folders/directories.
+ */
+package xyz.swatt.files;
